--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -5,41 +5,14 @@
             <div class="row g-5">
                 <div class="col-md-8">
 
-                    <article class="blog-post">
-                        <h2 class="blog-post-title mb-1">Sample blog post</h2>
-                        <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-                        <h2>Heading</h2>
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                        <h3>Sub-heading</h3>
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                        <pre><code>Example code block</code></pre>
-                        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-                    </article>
+                    {{#list}}
+                        <article class="blog-post">
+                            <h2 class="blog-post-title mb-1">{{title}}</h2>
+                            <p class="blog-post-meta">{{date}}</p>
+                            <p>{{description}}</p>          
+                        </article>
+                    {{/list}}
 
-                    <article class="blog-post">
-                        <h2 class="blog-post-title mb-1">Another blog post</h2>
-                        <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
-
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                        <blockquote>
-                        <p>Longer quote goes here, maybe with some <strong>emphasized text</strong> in the middle of it.</p>
-                        </blockquote>
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                        
-                    </article>
-
-                    <article class="blog-post">
-                        <h2 class="blog-post-title mb-1">New feature</h2>
-                        <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
-
-                        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                        <ul>
-                            <li>First list item</li>
-                            <li>Second list item with a longer description</li>
-                            <li>Third list item to close it out</li>
-                        </ul>
-                        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-                    </article>
                 </div>
             </div>
         </main>
