--- a/src/views/pages/newPost.mustache
+++ b/src/views/pages/newPost.mustache
@@ -1,2 +1,10 @@
 {{>partials/header}}
+    <h2>NewPost</h2>
+    <form action='/' method='POST'>
+        <input type='text' name='title' placeholder='Tittle' required>
+        <textarea type='text' name='description' required>
+        </textarea>
+        <button type='submit'>ADD</button>
+
+    </form>
 {{>partials/footer}}
